syntax = "proto3";
package kratos.api;

option go_package = "erp-system/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Auth auth = 3;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    int32 db = 4;
  }
  message JWT {
    string secret_key = 1;
    int64 access_token_expire = 2;
    int64 refresh_token_expire = 3;
  }
  Database database = 1;
  Redis redis = 2;
  JWT jwt = 3;
}

message Auth {
  string jwt_secret = 1;
  google.protobuf.Duration jwt_expire = 2;
  google.protobuf.Duration refresh_token_expire = 3;
}